4.Kubernetes/ingress/path-based-demo/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nginx-strip-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /nginx
