4.Kubernetes/ingress/path-based-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-app 
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: reactjs-svc
spec:
  selector:
    app: reactjs-app
  ports:
  - port: 80
    targetPort: 80
