4.Kubernetes/ingress/path-based-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-based-ingress
  # Will use the clustterissuer(cert-manager obj) to 
  # request for the certificates from letsencrypt
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-nginx-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  # related to https config 
  tls:
    - hosts:
        - nginx.anajak-khmer.site 
      secretName: path-based-tls-cert
  rules:
# this process might tbe able to automate 
  - host: react-demo.anajak-khmer.site
    http:
      paths: 
        - pathType: Prefix 
          path: "/"
          backend:
            service: 
              name: reactjs-svc 
              port: 
                number: 80  
        - pathType: Prefix 
          path: "/nginx"
          backend:
            service: 
              name: nginx-svc 
              port: 
                number: 80
